# pdf-workbench

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ISSUES.md  ROADMAP.md  SCOPE.md  coordinate-mapping.md  macos-testing.md
packaging/: pdf_workbench_macos.spec  pdf_workbench_onedir.spec  pdf_workbench_onefile.spec
scripts/: bootstrap_github.ps1  capture_recovery_dialog.py  capture_source_change_review.py  check_release.py  create_github_issues.py  generate_compatibility_fixtures.py
tests/: conftest.py  pdf_regression_utils.py  pdf_test_utils.py  test_app_paths.py  test_command_history.py  test_document_session.py  test_extract_pages_dialog.py  test_image_to_pdf_dialog.py  test_image_to_pdf_domain.py  test_image_to_pdf_service.py  test_main_entry.py  test_main_window.py  test_merge_pdfs_dialog.py  test_packaging_specs.py  test_page_commands.py  test_page_coordinates.py  test_page_crop.py  test_page_extraction.py  test_page_import_range.py  test_page_insertion_plan.py  test_page_organizer.py  test_page_replacement_plan.py  test_page_split.py  test_pdf_compatibility_corpus.py  test_pdf_document_validator.py  test_pdf_merge_domain.py  test_pdf_merge_service.py  test_pdf_page_crop.py  test_pdf_page_deletion.py  test_pdf_page_duplication.py  test_pdf_page_export.py  test_pdf_page_import.py  test_pdf_page_insertion.py  test_pdf_page_mutation.py  test_pdf_page_reordering.py  test_pdf_page_replacement.py  test_pdf_page_split.py  test_pdf_regression_utils.py  test_pdf_renderer.py  (+11 more)
(+83 files in other folders)
