[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pdf-workbench"
version = "0.1.0"
description = "Local-first PDF desktop workbench for Windows"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Yuki Masaoka" }]
dependencies = [
  "PySide6>=6.8,<7",
  "pypdfium2>=5,<6",
  "pikepdf>=9,<11",
  "pypdf>=5,<7",
  "Pillow>=11,<13",
  "platformdirs>=4.3,<5",
]

[project.optional-dependencies]
ocr = [
  "ocrmypdf>=16,<18",
]
dev = [
  "mypy>=1.15,<2",
  "pyinstaller>=6.15,<7",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "pytest-qt>=4.4,<5",
  "ruff>=0.11,<1",
]

[project.scripts]
pdf-workbench = "pdf_workbench.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_workbench"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
allowed-confusables = ["？"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["pdf_workbench"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
  "gui: tests requiring a Qt application",
  "integration: tests requiring external PDF tooling",
]
